[package]
name = "bevy_gif_capturer"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Peterson"]
description = "Gif capturer for Bevy Ecosystem"
repostiory = "https://github.com/Andrewp2/bevy_gif_capturer"
categories = ["game-development"]
keywords = ["gamedev", "gif", "wgpu"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
bevy = { version = "0.8.0-dev", path = "../bevy"}
gif = "0.11.3"
pollster = "0.2"

[workspace]
resolver = "2"